--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Weather App</string>
     <string name="title_activity_maps">Click on Map</string>
     <string name="title_activity_cities">Cities</string>
+    <string name="title_activity_details_city">City</string>
 </resources>
